# bridge.hc

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  scratch.rs
crates/bridge/workdir/: dna.yaml
crates/bridge/zomes/coordinator/bridge/: Cargo.toml
crates/bridge/zomes/coordinator/bridge/src/: authority_list.rs  lib.rs  transaction.rs  utils.rs
crates/bridge/zomes/coordinator/transaction_request/: Cargo.toml
crates/bridge/zomes/coordinator/transaction_request/src/: handlers.rs  utils.rs
crates/bridge/zomes/integrity/bridge/: Cargo.toml
crates/bridge/zomes/integrity/bridge/src/: authority_list.rs  lib.rs  properties.rs  validation.rs
crates/bridge/zomes/integrity/transaction_request/: Cargo.toml
crates/bridge/zomes/integrity/transaction_request/src/: lib.rs  transaction.rs  validation.rs
crates/bridge_hc_types/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
dnas/bridge/workdir/: dna.yaml
dnas/bridge/zomes/coordinator/bridge/: Cargo.toml
dnas/bridge/zomes/coordinator/bridge/src/: approval.rs  authority_list.rs  lib.rs  transaction.rs  utils.rs
dnas/bridge/zomes/coordinator/transaction_request/: Cargo.toml
dnas/bridge/zomes/coordinator/transaction_request/src/: handlers.rs  lib.rs  utils.rs
dnas/bridge/zomes/integrity/bridge/: Cargo.toml
dnas/bridge/zomes/integrity/bridge/src/: approval.rs  authority_list.rs  lib.rs  properties.rs  transaction.rs  validation.rs
dnas/bridge/zomes/integrity/transaction_request/: Cargo.toml
dnas/bridge/zomes/integrity/transaction_request/src/: entry.rs  lib.rs  signals.rs  types.rs  utils.rs  validation.rs
dnas/types/src/: lib.rs
tests/: .gitignore  package.json
tests/src/bridge/bridge/: approval.test.ts  authority-list.test.ts  common.ts  transaction-request.test.ts  utils.ts
ui/: .gitignore  index.html  package.json  vite.config.ts
ui/src/: holochain-app.ts  types.ts
ui/src/bridge/bridge/: approval-detail.ts  authority-list-detail.ts  create-approval.ts  create-authority-list.ts  edit-approval.ts  edit-authority-list.ts  types.ts
ui/src/bridge/profiles/: types.ts
ui/src/components/: footer-component.ts  header-component.ts  main-component.ts
workdir/: happ.yaml  web-happ.yaml
