[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.bridge]
path = "dnas/bridge/zomes/coordinator/bridge"

[workspace.dependencies.bridge_integrity]
path = "dnas/bridge/zomes/integrity/bridge"

[workspace.dependencies.hc_zome_transaction_requests_coordinator]
path = "dnas/bridge/zomes/coordinator/transaction_request"

[workspace.dependencies.hc_zome_transaction_requests_integrity]
path = "dnas/bridge/zomes/integrity/transaction_request"

[workspace.dependencies.profiles]
path = "dnas/bridge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/bridge/zomes/integrity/profiles"
