[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*/zomes/coordinator/*", "crates/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.bridge]
path = "crates/bridge/zomes/coordinator/bridge"

[workspace.dependencies.bridge_integrity]
path = "crates/bridge/zomes/integrity/bridge"

[workspace.dependencies.transaction_requests]
path = "crates/bridge/zomes/coordinator/transaction_request"

[workspace.dependencies.transaction_requests_integrity]
path = "crates/bridge/zomes/integrity/transaction_request"

[workspace.dependencies.profiles]
path = "crates/bridge/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "crates/bridge/zomes/integrity/profiles"

[workspace.dependencies.types]
path = "crates/types"
