[package]
edition = "2021"
name = "transaction_requests"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "transaction_requests"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
transaction_requests_integrity = { workspace = true }
bridge_hc_types = { workspace = true }