[package]
edition = "2021"
name = "hc_zome_transaction_requests_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_transaction_requests_coordinator"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

bridge_integrity = {path = "../../integrity/bridge"}
hc_zome_transaction_requests_integrity = {path = "../../integrity/transaction_request"}
hdk = {version = "0.0.127", features = ["encoding"]}
