[package]
edition = "2021"
name = "hc_zome_transaction_requests_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_transaction_requests_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

bridge_integrity = { workspace = true }

hc_zome_transaction_requests_integrity = {path = "../../integrity/transaction_request"}
